[v2 branch]

* Removed the "special" implementation of label() from FormBuilder, so builder.label will call Rails' label helper, not ours
* Changed formtastic:form generator include the wrapping semantic_form_for block
* Changed formtastic:form generator to generate a partial by default (instead of copying to clipboard, which can be done with --copy)
* Removed formtastic_stylesheet_link_tag
* Improved some documentation, much more to come
* Tagged many modules as @private to remove from YARD documentation
* Added YARD as development dependency for a massive documentation effort
* Renamed Formtastic::SemanticFormHelper to Formtastic::Helpers::FormHelper (SemanticFormHelper still exists as a module which includes the new module, need to handle deprecation notices somehow)
* Renamed Formtastic::SemanticFormBuilder to Formtastic::FormBuilder (SemanticFormBuilder still exists as a subclass, need to handle deprecation notices somehow)
* Massive refactoring of formtastic.rb into around 30 files and modules like StringInput and ButtonsHelper
* Removed chunks of Rails 2 specific code, tests and documentation

1.2.4.beta (unreleased)

* Changed :boolean inputs to use Rails' check_box_checked? instead of our own logic
* Changed developer instructions in README
* Fixed :boolean inputs to disable the included hidden input when disabling the actual checkbox
* Fixed that Formtastic was making changes to the options hash directly instead of on a duplicate, causing problems for those trying to reuse options on multiple inputs in the view 
* Fixed that tiny scroll bars were appearing on legends in date/time/radio/cbheckboxes fielsets (GH-477)    
* Fixed an issue when formtastic fails to determine if a checkbox is checked with custom checked and unchecked values (thanks to Eugene Bolshakov)
* Fixed that the hidden input rendered with a boolean checkbox did nt use the custom :name from :input_html options hash

1.2.3
