@@ -29,7 +29,8 @@ module Formtastic
           opts
         end
         
-        # TODO doesn't cover custom ordering
+        # Override this method if you want to change the display order (for example, rendering the
+        # errors before the body of the input).
         def input_wrapping(&block)
           template.content_tag(:li, 
             [template.capture(&block), error_html, hint_html].join("\n").html_safe, 
