@@ -1,5 +1,6 @@
 [v2 branch]
 
+* Removed the "inline_order" configuration (redefine input_wrapping instead)
 * Removed the "special" implementation of label() from FormBuilder, so builder.label will call Rails' label helper, not ours
 * Changed formtastic:form generator include the wrapping semantic_form_for block
 * Changed formtastic:form generator to generate a partial by default (instead of copying to clipboard, which can be done with --copy)
